--- a/Makefile.in
+++ b/Makefile.in
@@ -1,38 +1,38 @@
 ## The type of library we want to build. Possible values:
 ##   relocatable
 ##   static
-ASF_LIBRARY_TYPE=static
+SERVLET_LIBRARY_TYPE=static
 
 # You may edit this makefile as long as you keep these original 
 # target names defined.
-MODE=distrib
+MODE=debug
 GNATMAKE=@GNATMAKE@
 GNATCLEAN=gnatclean
 GPRINSTALL=@GPRINSTALL@
 INSTALL=@INSTALL@
 DYNAMO=dynamo
 
-GPRPATH=asf.gpr
-ASF_GPRPATH=asf_core.gpr
-AWS_GPRPATH=asf_aws.gpr
-ASF_UNIT_GPRPATH=asf_unit.gpr
+GPRPATH=servlet.gpr
+SERVLET_GPRPATH=servlet_core.gpr
+AWS_GPRPATH=servlet_aws.gpr
+SERVLET_UNIT_GPRPATH=servlet_unit.gpr
 
 BUILDS_SHARED=@BUILDS_SHARED@
 
-version=@ASF_VERSION@
+version=@SERVLET_VERSION@
 
-distdir=ada-asf-@ASF_VERSION@
+distdir=ada-servlet-@SERVLET_VERSION@
 
-DIST_FILE=ada-asf-@ASF_VERSION@.tar.gz
+DIST_FILE=ada-servlet-@SERVLET_VERSION@.tar.gz
 
-HAVE_AWS=@ASF_HAVE_AWS@
+HAVE_AWS=@SERVLET_HAVE_AWS@
 
 LN_S=@LN_S@
 MKDIR=mkdir
 CP=cp
 LN=ln -s
 
-ASF_SERVER=@ASF_SERVER@
+SERVLET_SERVER=@SERVLET_SERVER@
 
 ifeq (${OS},Windows_NT)
 LIBEXT=dll
@@ -61,19 +61,16 @@ infix_lib=@ADA_LIB_BASE@
 # lib/ada/adalib
 infix_ali=@ADA_ALI_BASE@
 
-includedir=${prefix}/${infix_inc}
 projectdir=${prefix}/${infix_prj}
 bindir=${prefix}/bin
-libdir=${prefix}/${infix_lib}
-alidir=${prefix}/${infix_ali}
 dynamodir=${prefix}/share/dynamo
 
-libname=libada_asf
+libname=libada_servlet
 libprefix=$(libname)_
 
 PROCESSORS=@NR_CPUS@
-MAKE_ARGS=-XMODE=${MODE} -XASF_LIBRARY_TYPE=${ASF_LIBRARY_TYPE} -XPROCESSORS=$(PROCESSORS)
-ifeq ($(ASF_LIBRARY_TYPE),relocatable)
+MAKE_ARGS=-XMODE=${MODE} -XSERVLET_LIBRARY_TYPE=${SERVLET_LIBRARY_TYPE} -XPROCESSORS=$(PROCESSORS)
+ifeq ($(SERVLET_LIBRARY_TYPE),relocatable)
 MAKE_ARGS += -XUTIL_BUILD=relocatable -XUTIL_LIBRARY_TYPE=relocatable
 MAKE_ARGS += -XEL_BUILD=relocatable -XEL_LIBRARY_TYPE=relocatable
 MAKE_ARGS += -XSECURITY_BUILD=relocatable -XSECURITY_LIBRARY_TYPE=relocatable
@@ -92,21 +89,21 @@ install: uninstall install_static install-info
 endif
 
 # Build executables for all mains defined by the project.
-build: setup regtests/asf-testsuite.adb
-	$(GNATMAKE) -m -p -P "$(ASF_GPRPATH)" $(MAKE_ARGS)
+build: setup regtests/servlet-testsuite.adb
+	$(GNATMAKE) -m -p -P "$(SERVLET_GPRPATH)" $(MAKE_ARGS)
 	test T${HAVE_AWS} = Tno || \
 		$(GNATMAKE) -m -p -P "$(AWS_GPRPATH)" $(MAKE_ARGS)
-	$(GNATMAKE) -m -p -Pasf_tests $(MAKE_ARGS)
+	$(GNATMAKE) -m -p -Pservlet_tests $(MAKE_ARGS)
 
 static:
-	$(MAKE) ASF_LIBRARY_TYPE=static build
+	$(MAKE) SERVLET_LIBRARY_TYPE=static build
 
 shared:
-	$(MAKE) ASF_LIBRARY_TYPE=relocatable build
+	$(MAKE) SERVLET_LIBRARY_TYPE=relocatable build
 
-setup: obj/asf/static lib/asf/static obj/asf-aws/static lib/asf-aws/static
+setup: obj/servlet/static lib/servlet/static obj/servlet-aws/static lib/servlet-aws/static
 
-obj/asf/static lib/asf/static obj/asf-aws/static lib/asf-aws/static:
+obj/servlet/static lib/servlet/static obj/servlet-aws/static lib/servlet-aws/static:
 	$(MKDIR) -p $@
 
 # Build and run the unit tests
@@ -114,15 +111,15 @@ check test:	build-tests runtest
 
 runtest:
 	DIR=`pwd`; \
-	export LD_LIBRARY_PATH="$$DIR/lib/asf/relocatable:$$DIR/lib/asfunit/relocatable:$$LD_LIBRARY_PATH"; \
-	export PATH="$$DIR/lib/asf/relocatable:$$DIR/lib/asfunit/relocatable:$$PATH"; \
-	bin/asf_harness -xml asf-aunit.xml -config test.properties
+	export LD_LIBRARY_PATH="$$DIR/lib/servlet/relocatable:$$DIR/lib/servletunit/relocatable:$$LD_LIBRARY_PATH"; \
+	export PATH="$$DIR/lib/servlet/relocatable:$$DIR/lib/servletunit/relocatable:$$PATH"; \
+	bin/servlet_harness -xml servlet-aunit.xml -config test.properties
 
 build-tests:	build
-	$(GNATMAKE) -p -Pasf_tests $(MAKE_ARGS)
+	$(GNATMAKE) -p -Pservlet_tests $(MAKE_ARGS)
 
-regtests/asf-testsuite.adb: regtests/asf-testsuite.gpb Makefile
-	gnatprep -DASF_SERVER=$(ASF_SERVER) regtests/asf-testsuite.gpb $@
+regtests/servlet-testsuite.adb: regtests/servlet-testsuite.gpb Makefile
+	gnatprep -DSERVLET_SERVER=$(SERVLET_SERVER) regtests/servlet-testsuite.gpb $@
 
 # Not intended for manual invocation.
 # Invoked if automatic builds are enabled.
@@ -155,21 +152,21 @@ rebuild: clean build
 coverage:  coverage-init runtest coverage-capture coverage-report
 
 COVERAGE_OPTIONS= \
-		 --directory src --directory asfunit --directory regtests \
-		 --directory obj --directory obj/asf/static --directory obj/asfunit/static
+		 --directory src --directory servletunit --directory regtests \
+		 --directory obj --directory obj/servlet/static --directory obj/servletunit/static
 
 coverage-init:
 	lcov --no-external --initial --capture $(COVERAGE_OPTIONS) \
-		 --output-file asf-coverage.info
+		 --output-file servlet-coverage.info
 
 coverage-capture:
 	lcov --no-external --capture $(COVERAGE_OPTIONS) \
-		 --output-file asf-coverage.info
-	lcov --remove asf-coverage.info '*.ads' -o asf-coverage-body.info
+		 --output-file servlet-coverage.info
+	lcov --remove servlet-coverage.info '*.ads' -o servlet-coverage-body.info
 
 coverage-report:
 	mkdir -p cov
-	genhtml --ignore-errors source asf-coverage-body.info --legend --title "Ada Server Faces" \
+	genhtml --ignore-errors source servlet-coverage-body.info --legend --title "Ada Server Faces" \
 			--output-directory cov
 
 doc:
@@ -179,107 +176,29 @@ dist:
 	git archive -o $(DIST_FILE) --prefix=$(distdir)/ HEAD
 
 install_static:
-	$(MAKE) ASF_LIBRARY_TYPE=static install_lib
+	$(MAKE) SERVLET_LIBRARY_TYPE=static install_lib
 
 install_shared:
-	$(MAKE) ASF_LIBRARY_TYPE=relocatable install_lib
+	$(MAKE) SERVLET_LIBRARY_TYPE=relocatable install_lib
 
 install_lib:
-ifneq (${GPRINSTALL},)
 	$(GPRINSTALL) -p -f --prefix=${prefix} $(MAKE_ARGS) \
-		--build-name=$(ASF_LIBRARY_TYPE) $(GPRPATH)
+		--build-name=$(SERVLET_LIBRARY_TYPE) $(GPRPATH)
 	$(GPRINSTALL) -p -f --prefix=${prefix} $(MAKE_ARGS) \
-		--build-name=$(ASF_LIBRARY_TYPE) $(ASF_GPRPATH)
+		--build-name=$(SERVLET_LIBRARY_TYPE) $(SERVLET_GPRPATH)
 	$(GPRINSTALL) -p -f --prefix=${prefix} $(MAKE_ARGS) \
-		--build-name=$(ASF_LIBRARY_TYPE) $(ASF_UNIT_GPRPATH)
+		--build-name=$(SERVLET_LIBRARY_TYPE) $(SERVLET_UNIT_GPRPATH)
 	test T${HAVE_AWS} = Tno || \
 	 $(GPRINSTALL) -p -f --prefix=${prefix} $(MAKE_ARGS) \
-		--build-name=$(ASF_LIBRARY_TYPE) $(AWS_GPRPATH)
-else
-	-rm -rf ${includedir}/ada-asf ${includedir}/ada-asf-aws ${includedir}/ada-asf-unit
-	-rm -rf ${alidir}/ada-asf ${alidir}/ada-asf-aws ${alidir}/ada-asf-unit
-	$(MKDIR) -p ${includedir}/ada-asf
-	$(MKDIR) -p ${includedir}/ada-asf-aws
-	$(MKDIR) -p ${includedir}/ada-asf-unit
-	$(MKDIR) -p ${projectdir}/
-	${MKDIR} -p ${alidir}/ada-asf
-	test T${HAVE_AWS} = Tno || \
-		 ${MKDIR} -p ${alidir}/ada-asf-aws
-	${MKDIR} -p ${alidir}/ada-asf-unit
-	${CP} -p asfunit/*.ad[bs] ${includedir}/ada-asf-unit
-	${CP} -p src/*.ad[bs] ${includedir}/ada-asf
-	test T${HAVE_AWS} = Tno || \
-		 ${CP} -p src/aws/*.ad[bs] ${includedir}/ada-asf-aws
-	sed -e "s,LIBRARY_TYPE,$(ASF_LIBRARY_TYPE),g" < distrib/asf.gpr > ${projectdir}/asf.gpr
-	sed -e "s,LIBRARY_TYPE,$(ASF_LIBRARY_TYPE),g" < distrib/asf_core.gpr > ${projectdir}/asf_core.gpr
-	test T${HAVE_AWS} = Tno || \
-		 sed -e "s,LIBRARY_TYPE,$(ASF_LIBRARY_TYPE),g" \
-			 < distrib/asf_aws.gpr > ${projectdir}/asf_aws.gpr
-	sed -e "s,LIBRARY_TYPE,$(ASF_LIBRARY_TYPE),g" \
-		< distrib/asf_unit.gpr > ${projectdir}/asf_unit.gpr
-	${CP} -p lib/asf/$(ASF_LIBRARY_TYPE)/*.ali ${alidir}/ada-asf
-	${CP} -p lib/asfunit/$(ASF_LIBRARY_TYPE)/*.ali ${alidir}/ada-asf-unit
-	test T${HAVE_AWS} = Tno || \
-		 ${CP} -p lib/asf-aws/$(ASF_LIBRARY_TYPE)/*.ali ${alidir}/ada-asf-aws
-ifeq ($(ASF_LIBRARY_TYPE),static)
-	${CP} -p lib/asf/$(ASF_LIBRARY_TYPE)/$(libname).a ${libdir}/
-	${CP} -p lib/asfunit/$(ASF_LIBRARY_TYPE)/$(libprefix)unit.a ${libdir}/
-	test T${HAVE_AWS} = Tno || \
-		 ${CP} -p lib/asf-aws/$(ASF_LIBRARY_TYPE)/$(libprefix)aws.a ${libdir}/
-else
-	test T${HAVE_AWS} = Tno || \
-	   ${CP} -p lib/asf-aws/$(ASF_LIBRARY_TYPE)/$(libprefix)aws.$(LIBVER) ${libdir}/
-	${CP} -p lib/asf/$(ASF_LIBRARY_TYPE)/$(libname).$(LIBVER) ${libdir}/
-	${CP} -p lib/asfunit/$(ASF_LIBRARY_TYPE)/$(libprefix)unit.$(LIBVER) ${libdir}/
-ifneq (${OS},Windows_NT)
-	cd ${libdir} && \
-	rm -f $(libname).$(LIBEXT) $(libprefix)aws.$(LIBEXT) $(libprefix)unit.$(LIBEXT) && \
-	${LN} $(libname).$(LIBVER) $(libname).$(LIBEXT) && \
-	${LN} $(libprefix)unit.$(LIBVER) $(libprefix)unit.$(LIBEXT) && \
-	(test T${HAVE_AWS} = Tno || \
-	   ${LN} $(libprefix)aws.$(LIBVER) $(libprefix)aws.$(LIBEXT))
-endif
-endif
-endif
-	${MKDIR} -p ${dynamodir}/asf/bundles
-	${MKDIR} -p ${dynamodir}/asf/web
-	(cd web && tar --exclude=.svn --exclude='*~' -cf - . )| (cd ${dynamodir}/asf/web && tar xf -)
-	${CP} bundles/*.properties ${dynamodir}/asf/bundles/
-	${CP} dynamo.xml ${dynamodir}/asf/
-	${CP} NOTICE.txt ${dynamodir}/asf/
-	${CP} LICENSE.txt ${dynamodir}/asf/
+		--build-name=$(SERVLET_LIBRARY_TYPE) $(AWS_GPRPATH)
 
 install-info:
-ifeq (${GPRINSTALL},)
-	@echo "Installation directories:"
-	@echo "  Ada source files:    ${includedir}"
-	@echo "  ALI files:           ${alidir}"
-	@echo "  Libraries:           ${libdir}"
-	@echo "  GNAT project:        ${projectdir}"
-endif
 	@echo "Environment setup:"
 	@echo "  export ADA_PROJECT_PATH=${projectdir}:$$ADA_PROJECT_PATH"
 
 uninstall:
-ifneq (${GPRINSTALL},)
 	-$(GPRINSTALL) -q -f --prefix=${prefix} $(MAKE_ARGS) --uninstall $(GPRPATH)
-	-$(GPRINSTALL) -q -f --prefix=${prefix} $(MAKE_ARGS) --uninstall $(ASF_GPRPATH)
-	-$(GPRINSTALL) -q -f --prefix=${prefix} $(MAKE_ARGS) --uninstall $(ASF_UNIT_GPRPATH)
+	-$(GPRINSTALL) -q -f --prefix=${prefix} $(MAKE_ARGS) --uninstall $(SERVLET_GPRPATH)
+	-$(GPRINSTALL) -q -f --prefix=${prefix} $(MAKE_ARGS) --uninstall $(SERVLET_UNIT_GPRPATH)
 	-test T${HAVE_AWS} = Tno || \
 	 $(GPRINSTALL) -q -f --prefix=${prefix} $(MAKE_ARGS) --uninstall $(AWS_GPRPATH)
-else
-	rm -rf ${includedir}/ada-asf
-	rm -rf ${includedir}/ada-asf-aws
-	rm -rf ${includedir}/ada-asf-unit
-	rm -rf ${alidir}/ada-asf ${alidir}/ada-asf-aws ${alidir}/ada-asf-unit
-	rm -f ${libdir}/$(libname).a
-	rm -f ${libdir}/$(libprefix)aws.a
-	rm -f ${libdir}/$(libprefix)unit.a
-	rm -f ${libdir}/$(libname).$(LIBEXT)
-	rm -f ${libdir}/$(libprefix)unit.$(LIBEXT)
-	rm -f ${projectdir}/asf.gpr
-	rm -f ${projectdir}/asf_unit.gpr
-	rm -f ${projectdir}/asf_core.gpr
-	rm -f ${projectdir}/asf_aws.gpr
-endif
-	rm -rf ${dynamodir}/asf
