Refactor the configure script for Ada Servlet project

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
-dnl Autoconf configure script for Ada Server Faces
-dnl Copyright (C) 2009, 2010, 2011, 2012, 2013, 2015, 2016 Stephane Carrez
+dnl Autoconf configure script for Ada Servlet
+dnl Copyright (C) 2009 - 2018 Stephane Carrez
 dnl Written by Stephane Carrez (Stephane.Carrez@gmail.com)
 dnl
 dnl  Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,16 +16,16 @@ dnl  limitations under the License.
 dnl 
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(src/asf.ads)
+AC_INIT(src/servlet.ads)
 
 AC_CANONICAL_SYSTEM
 dnl AM_MAINTAINER_MODE
 
 # Current release settings
-ASF_MAJOR_VERSION=1
-ASF_MINOR_VERSION=2
-ASF_MICRO_VERSION=0
-ASF_VERSION=$ASF_MAJOR_VERSION.$ASF_MINOR_VERSION.$ASF_MICRO_VERSION
+SERVLET_MAJOR_VERSION=1
+SERVLET_MINOR_VERSION=2
+SERVLET_MICRO_VERSION=0
+SERVLET_VERSION=$SERVLET_MAJOR_VERSION.$SERVLET_MINOR_VERSION.$SERVLET_MICRO_VERSION
 
 AM_GNAT_CHECK_GPRBUILD
 
@@ -36,16 +36,16 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 
 # Set the version number of Ada Server Faces
-AC_SUBST(ASF_VERSION)
-AC_SUBST(ASF_MAJOR_VERSION)
-AC_SUBST(ASF_MINOR_VERSION)
-AC_SUBST(ASF_MICRO_VERSION)
+AC_SUBST(SERVLET_VERSION)
+AC_SUBST(SERVLET_MAJOR_VERSION)
+AC_SUBST(SERVLET_MINOR_VERSION)
+AC_SUBST(SERVLET_MICRO_VERSION)
 
 EXEC_PREFIX="$prefix"
 AC_SUBST(EXEC_PREFIX)
 
-ASF_LIBDIR="lib"
-AC_SUBST(ASF_LIBDIR)
+SERVLET_LIBDIR="lib"
+AC_SUBST(SERVLET_LIBDIR)
 
 AC_MSG_CHECKING([number of processors])
 NR_CPUS=`getconf _NPROCESSORS_CONF 2>/dev/null || getconf NPROCESSORS_CONF 2>/dev/null || echo 1`
@@ -73,7 +73,7 @@ AC_SUBST(UTIL_DIR)
 ##########################################
 AM_GNAT_FIND_PROJECT([ada-el],[Ada Expression Language Library],[el],
   [git@github.com:stcarrez/ada-el.git],
-  [Building Ada Server Faces requires the Ada EL Library.],
+  [Building Ada Servlet requires the Ada EL Library.],
   [
     EL_DIR=${gnat_project_dir_el}
   ])
@@ -84,7 +84,7 @@ AC_SUBST(EL_DIR)
 ##########################################
 AM_GNAT_FIND_PROJECT([ada-security],[Ada Security Library],[security],
   [git@github.com:stcarrez/ada-security.git],
-  [Building Ada Server Faces requires the Ada Security Library.],
+  [Building Ada Servlet requires the Ada Security Library.],
   [
     SECURITY_DIR=${gnat_project_dir_security}
   ])
@@ -95,23 +95,23 @@ AC_SUBST(SECURITY_DIR)
 ##########################################
 AM_GNAT_CHECK_AWS(
   [
-    ASF_HAVE_AWS=no
-    ASF_SERVER=none
+    SERVLET_HAVE_AWS=no
+    SERVLET_SERVER=none
     WITH_SERVER=
   ], [
-    ASF_SERVER=aws
-    ASF_HAVE_AWS=yes
+    SERVLET_SERVER=aws
+    SERVLET_HAVE_AWS=yes
     WITH_SERVER="with \"${gnat_project_name}\";";
-    WITH_ASF_AWS="with \"asf_aws\";";
+    WITH_SERVLET_AWS="with \"servlet_aws\";";
   ])
-AC_SUBST(ASF_SERVER)
-AC_SUBST(ASF_HAVE_AWS)
+AC_SUBST(SERVLET_SERVER)
+AC_SUBST(SERVLET_HAVE_AWS)
 AC_SUBST(WITH_SERVER)
-AC_SUBST(WITH_ASF_AWS)
+AC_SUBST(WITH_SERVLET_AWS)
 
 AM_UTIL_CHECK_INSTALL
 
 AC_OUTPUT(
-Makefile asf.gpr asf_core.gpr asf_aws.gpr asf_tests.gpr samples.gpr asf_unit.gpr distrib/asf.gpr distrib/asf_unit.gpr distrib/asf_core.gpr distrib/asf_aws.gpr
+Makefile servlet.gpr servlet_core.gpr servlet_aws.gpr servlet_tests.gpr samples.gpr servlet_unit.gpr
 )
 
