--- a/servlet_unit.gpr.in
+++ b/servlet_unit.gpr.in
@@ -9,7 +9,7 @@ project Servlet_Unit is
    Library_Dir := "lib";
    Library_Type : Config.Library_Type_Type := external ("SERVLET_LIBRARY_TYPE", "static");
 
-   for Source_Dirs use ("servletunit");
+   for Source_Dirs use ("servlet_unit");
 
    for Library_Name use "ada_servlet_unit";
    for Library_Kind use Library_Type;
