Update the ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,18 @@ ChangeLog
 .settings
 configure.lineno
 Makefile
-asf.gpr
-tests.gpr
+servlet.gpr
+servlet_tests.gpr
+servlet_aws.gpr
+servlet_core.gpr
+t.gpr
+servlet_unit.gpr
 tests.xml
-asf-tests.xml
+servlet-tests.xml
 autom4te.cache
 bin/
 obj/
 lib/
-asf-aunit.xml
-distrib/asf.gpr
+servlet-aunit.xml
 regtests/result/
-regtests/asf-testsuite.adb
+regtests/servlet-testsuite.adb
