--- a/samples.gpr.in
+++ b/samples.gpr.in
@@ -1,27 +1,15 @@
 with "@UTIL_DIR@config";
 with "@UTIL_DIR@util";
 with "@EL_DIR@el";
-with "asf";
+with "servlet";
 
 project Samples is
 
-   Mains := ("render.adb", "volume_server.adb", "demo_server.adb",
-   "asf_volume_server.adb", "openid.adb", "upload_server.adb", "api_server.adb");
+   Mains := ("volume_server.adb", "upload_server.adb", "api_server.adb");
 
    for Main use Mains;
 
-   package Naming is
-      case Util.Has_Vector_Mappers is
-           when "yes" =>
-                for Implementation ("Facebook") use "facebook-with_feeds.adb";
-
-           when "no" =>
-                for Implementation ("Facebook") use "facebook-no_feeds.adb";
-
-      end case;
-   end Naming;
-
-   for Source_Dirs use ("samples", "samples/beans", "samples/rest");
+   for Source_Dirs use ("samples", "samples/rest");
 
    for Object_Dir use "./" & Config'Object_Dir & "/obj";
    for Exec_Dir use "./" & Config'Exec_Dir & "/bin";
