--- a/Makefile.in
+++ b/Makefile.in
@@ -69,7 +69,8 @@ libname=libada_servlet
 libprefix=$(libname)_
 
 PROCESSORS=@NR_CPUS@
-MAKE_ARGS=-XMODE=${MODE} -XSERVLET_LIBRARY_TYPE=${SERVLET_LIBRARY_TYPE} -XPROCESSORS=$(PROCESSORS)
+COVERAGE=no
+MAKE_ARGS=-XMODE=${MODE} -XCOVERAGE=${COVERAGE} -XSERVLET_LIBRARY_TYPE=${SERVLET_LIBRARY_TYPE} -XPROCESSORS=$(PROCESSORS)
 ifeq ($(SERVLET_LIBRARY_TYPE),relocatable)
 MAKE_ARGS += -XUTIL_BUILD=relocatable -XUTIL_LIBRARY_TYPE=relocatable
 MAKE_ARGS += -XEL_BUILD=relocatable -XEL_LIBRARY_TYPE=relocatable
