Add --enable-distrib and --enable-coverage options

--- a/configure.ac
+++ b/configure.ac
@@ -30,7 +30,6 @@ SERVLET_VERSION=$SERVLET_MAJOR_VERSION.$SERVLET_MINOR_VERSION.$SERVLET_MICRO_VER
 AM_GNAT_CHECK_GPRBUILD
 
 # checking for local tools
-AC_PROG_CC
 AC_PROG_MAKE_SET
 AC_PROG_INSTALL
 AC_PROG_LN_S
@@ -56,6 +55,8 @@ AC_SUBST(NR_CPUS)
 # Check to enable/disable shared library
 ##########################################
 AM_SHARED_LIBRARY_SUPPORT
+AM_DISTRIB_SUPPORT
+AM_COVERAGE_SUPPORT
 
 ##########################################
 # Ada Util library
