--- a/servlet_aws.gpr.in
+++ b/servlet_aws.gpr.in
@@ -27,8 +27,8 @@ project Servlet_Aws is
    for Library_Kind use Library_Type;
    for Library_Version use "lib" & Project'Library_Name & ".so." & Version;
 
-   for Library_Dir use Library_Dir & "/servlet-aws/" & Project'Library_Kind;
-   for Object_Dir use "./" & Config'Object_Dir & "/obj/servlet-aws/" & Project'Library_Kind;
+   for Library_Dir use Library_Dir & "/servlet_aws/" & Project'Library_Kind;
+   for Object_Dir use "./" & Config'Object_Dir & "/obj/servlet_aws/" & Project'Library_Kind;
 
    package Binder renames Config.Binder;
    package Builder renames Config.Builder;
