--- a/servletada_aws.gpr.in
+++ b/servletada_aws.gpr.in
@@ -1,12 +1,12 @@
 with "@UTIL_DIR@config";
-with "servlet_core";
-with "@UTIL_DIR@util_http_aws";
+with "servletada_core";
+with "@UTIL_DIR@utilada_aws";
 @WITH_SERVER@
 
-project Servlet_Aws is
+project ServletAda_Aws is
 
    Version := "@SERVLET_VERSION@";
-   Library_Dir := "@SERVLET_LIBDIR@";
+   Library_Dir := "lib";
    Library_Type : Config.Library_Type_Type := external ("SERVLET_LIBRARY_TYPE", "static");
 
    Has_Aws     : Config.Yes_No := "@SERVLET_HAVE_AWS@";
@@ -23,16 +23,17 @@ project Servlet_Aws is
 
    end case;
 
-   for Library_Name use "ada_servlet_aws";
+   for Library_Name use "servletada_aws";
    for Library_Kind use Library_Type;
    for Library_Version use "lib" & Project'Library_Name & ".so." & Version;
 
-   for Library_Dir use Library_Dir & "/servlet_aws/" & Project'Library_Kind;
-   for Object_Dir use "./" & Config'Object_Dir & "/obj/servlet_aws/" & Project'Library_Kind;
+   for Library_Dir use Library_Dir & "/servletada_aws/" & Project'Library_Kind;
+   for Object_Dir use "./" & Config'Object_Dir & "/obj/servletada_aws/" & Project'Library_Kind;
 
    package Binder renames Config.Binder;
    package Builder renames Config.Builder;
    package Compiler renames Config.Compiler;
    package Ide      renames Config.Ide;
 
-end Servlet_Aws;
+end ServletAda_Aws;
+
