--- a/servletada_core.gpr.in
+++ b/servletada_core.gpr.in
@@ -1,26 +1,26 @@
 with "@UTIL_DIR@config";
-with "@UTIL_DIR@util";
-with "@EL_DIR@el";
+with "@UTIL_DIR@utilada_sys";
+with "@EL_DIR@elada";
 with "@SECURITY_DIR@security";
 
-project Servlet_Core is
+project ServletAda_Core is
 
    Version := "@SERVLET_VERSION@";
-   Library_Dir := "@SERVLET_LIBDIR@";
+   Library_Dir := "lib";
    Library_Type : Config.Library_Type_Type := external ("SERVLET_LIBRARY_TYPE", "static");
 
    for Source_Dirs use ("src");
 
-   for Library_Name use "ada_servlet";
+   for Library_Name use "servletada";
    for Library_Kind use Library_Type;
    for Library_Version use "lib" & Project'Library_Name & ".so." & Version;
 
-   for Library_Dir use Library_Dir & "/servlet/" & Project'Library_Kind;
-   for Object_Dir use "./" & Config'Object_Dir & "/obj/servlet/" & Project'Library_Kind;
+   for Library_Dir use Library_Dir & "/servletada_core/" & Project'Library_Kind;
+   for Object_Dir use "./" & Config'Object_Dir & "/obj/servletada_core/" & Project'Library_Kind;
 
    package Binder renames Config.Binder;
    package Builder renames Config.Builder;
    package Compiler renames Config.Compiler;
    package Ide      renames Config.Ide;
 
-end Servlet_Core;
+end ServletAda_Core;
