--- a/servletada_tests.gpr.in
+++ b/servletada_tests.gpr.in
@@ -3,6 +3,7 @@ with "@UTIL_DIR@utilada_sys";
 with "@UTIL_DIR@utilada_unit";
 with "@EL_DIR@elada";
 with "servletada";
+with "servletada_all";
 with "servletada_unit";
 
 project ServletAda_Tests is
@@ -10,7 +11,7 @@ project ServletAda_Tests is
    Mains := ("servlet_harness.adb");
 
    for Source_Dirs use ("regtests");
-   case ServletAda.Server is
+   case ServletAda_All.Server is
       when "aws" =>
           for Source_Dirs use project'Source_Dirs & ("regtests/aws");
 
