--- a/servletada_aws.gpr.in
+++ b/servletada_aws.gpr.in
@@ -7,7 +7,7 @@ project ServletAda_Aws is
 
    Version := "@SERVLET_VERSION@";
    Library_Dir := "lib";
-   Library_Type : Config.Library_Type_Type := external ("SERVLET_LIBRARY_TYPE", "static");
+   Library_Type : Config.Library_Type_Type := external ("SERVLET_LIBRARY_TYPE", "@DEFAULT_LIBRARY_TYPE@");
 
    Has_Aws     : Config.Yes_No := "@SERVLET_HAVE_AWS@";
 
