Configure the default GNAT library type

--- a/servletada_unit.gpr.in
+++ b/servletada_unit.gpr.in
@@ -7,7 +7,7 @@ with "servletada";
 project ServletAda_Unit is
 
    Library_Dir := "lib";
-   Library_Type : Config.Library_Type_Type := external ("SERVLET_LIBRARY_TYPE", "static");
+   Library_Type : Config.Library_Type_Type := external ("SERVLET_LIBRARY_TYPE", "@DEFAULT_LIBRARY_TYPE@");
 
    for Source_Dirs use ("servlet_unit");
 
