Check the version of AWS to use a specific implementation when the TCP_No_Delay option is not supported

--- a/configure.ac
+++ b/configure.ac
@@ -54,6 +54,24 @@ AC_SUBST(WITH_SERVER)
 AC_SUBST(WITH_SERVLET_AWS)
 AM_GNAT_AWS_VERSION
 
+AC_MSG_CHECKING([using AWS http server])
+SERVLET_AWS_VERSION=1
+case $AWS_VERSION in
+  *2018*|*2019*|*202*|20.0)
+     SERVLET_AWS_VERSION=2
+     ;;
+
+  3.3.2|*2017*)
+     SERVLET_AWS_VERSION=1
+     ;;
+
+  *)
+     SERVLET_AWS_VERSION=1
+     ;;
+esac
+AC_MSG_RESULT(${SERVLET_AWS_VERSION})
+AC_SUBST(SERVLET_AWS_VERSION)
+
 AC_OUTPUT(
 Makefile.conf
 servletada.gpr
