--- a/alire.toml
+++ b/alire.toml
@@ -1,21 +1,31 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (Core)"
+tags = ["web", "servlet", "http", "json"]
 name = "servletada"
 version = "1.5.0"
 licenses = ["Apache 2.0"]
+authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
 maintainers-logins = ["stcarrez"]
 project-files = [".alire/servletada.gpr"]
-tags = ["servlet", "rest", "http"]
 website = "https://gitlab.com/stcarrez/ada-servlet"
+long-description = """
 
-[[actions]]
-type = "post-fetch"
-command = ["rm", "-f", "config.gpr"]
+[![Build Status](https://img.shields.io/jenkins/s/http/jenkins.vacs.fr/Ada-Servlet.svg)](https://jenkins.vacs.fr/job/Ada-Servlet/)
+[![Test Status](https://img.shields.io/jenkins/t/http/jenkins.vacs.fr/Ada-Servlet.svg)](https://jenkins.vacs.fr/job/Ada-Servlet/)
+[![codecov](https://codecov.io/gh/stcarrez/ada-servlet/branch/master/graph/badge.svg)](https://codecov.io/gh/stcarrez/ada-servlet)
+
+Ada Servlet allows to create web applications using the same pattern
+as the Java Servlet (See JSR 154, JSR 315). 
+
+The Ada Servlet library is used by the [Ada Server Faces](https://github.com/stcarrez/ada-asf)
+framework and [Ada Web Application](https://github.com/stcarrez/ada-awa)
+to provide server web requests.
+
+"""
 
 [[depends-on]]
-security = "^1.2.2"
-elada = "^1.8.0"
-utilada = "^2.1.0"
+security = "^1.3.0"
+utilada = "^2.3.0"
 
 [gpr-externals]
 BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
