--- a/alire.toml
+++ b/alire.toml
@@ -1,8 +1,8 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (Core)"
-tags = ["web", "servlet", "http", "json"]
+tags = ["web", "servlet", "http", "json", "rest"]
 name = "servletada"
 version = "1.5.3"
-licenses = ["Apache 2.0"]
+licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
 maintainers-logins = ["stcarrez"]
@@ -24,9 +24,12 @@ to provide server web requests.
 """
 
 [[depends-on]]
-security = "^1.4.0"
-utilada = "^2.4.1"
+security = "^1.4.1"
+utilada = "^2.5.0"
 
 [gpr-externals]
 BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
 SERVLET_LIBRARY_TYPE = ["relocatable", "static", "static-pic"]
+
+[configuration]
+disabled = true
