--- a/alire-unit.toml
+++ b/alire-unit.toml
@@ -1,8 +1,8 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (Testing framework)"
-tags = ["web", "servlet", "http", "json", "testing"]
+tags = ["web", "servlet", "http", "json", "rest", "testing"]
 name = "servletada_unit"
-version = "1.5.1"
-licenses = ["Apache 2.0"]
+version = "1.5.3"
+licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
 maintainers-logins = ["stcarrez"]
@@ -20,10 +20,13 @@ Ada Servlet.
 """
 
 [[depends-on]]
-servletada = "^1.5.1"
-utilada = "^2.4.0"
-utilada_unit = "^2.4.0"
+servletada = "^1.5.3"
+utilada = "^2.5.0"
+utilada_unit = "^2.5.0"
 
 [gpr-externals]
 BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
 SERVLET_LIBRARY_TYPE = ["relocatable", "static", "static-pic"]
+
+[configuration]
+disabled = true
