--- a/alire-aws.toml
+++ b/alire-aws.toml
@@ -1,8 +1,8 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (AWS)"
 tags = ["web", "servlet", "http", "json"]
 name = "servletada_aws"
-version = "1.5.1"
-licenses = ["Apache 2.0"]
+version = "1.5.3"
+licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
 maintainers-logins = ["stcarrez"]
@@ -22,9 +22,12 @@ This library integrates the Ada Servlet in the Ada Web Server.
 """
 
 [[depends-on]]
-servletada = "^1.5.1"
-utilada_aws = "^2.4.0"
+servletada = "^1.5.3"
+utilada_aws = "^2.5.0"
 
 [gpr-externals]
 BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
 SERVLET_LIBRARY_TYPE = ["relocatable", "static", "static-pic"]
+
+[configuration]
+disabled = true
