--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ servletada.gpr
 servletada_tests.gpr
 servletada_aws.gpr
 servletada_all.gpr
+servletada_ews.gpr
 samples.gpr
 t.gpr
 servletada_unit.gpr
