--- a/alire-ews.toml
+++ b/alire-ews.toml
@@ -1,12 +1,12 @@
-description = "Web Servlet Library following JSR 154, JSR 315 (AWS)"
+description = "Web Servlet Library following JSR 154, JSR 315 (EWS)"
 tags = ["web", "servlet", "http", "json"]
-name = "servletada_aws"
+name = "servletada_ews"
 version = "1.6.0"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
 maintainers-logins = ["stcarrez"]
-project-files = [".alire/aws/servletada_aws.gpr"]
+project-files = [".alire/ews/servletada_ews.gpr"]
 website = "https://gitlab.com/stcarrez/ada-servlet"
 long-description = """
 
@@ -17,13 +17,12 @@ long-description = """
 Ada Servlet allows to create web applications using the same pattern
 as the Java Servlet (See JSR 154, JSR 315). 
 
-This library integrates the Ada Servlet in the Ada Web Server.
+This library integrates the Ada Servlet in the Embedded Web Server.
 
 """
 
 [[depends-on]]
 servletada = "^1.6.0"
-utilada_aws = "^2.5.0"
 
 [gpr-externals]
 BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
