--- a/.alire/ews/alire.toml
+++ b/.alire/ews/alire.toml
@@ -1,12 +1,12 @@
-description = "Web Servlet Library following JSR 154, JSR 315 (Core)"
-tags = ["web", "servlet", "http", "json", "rest"]
-name = "servletada"
+description = "Web Servlet Library following JSR 154, JSR 315 (EWS)"
+tags = ["web", "servlet", "http", "json"]
+name = "servletada_ews"
 version = "1.6.1"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
 maintainers-logins = ["stcarrez"]
-project-files = [".alire/servletada.gpr"]
+project-files = ["servletada_ews.gpr"]
 website = "https://gitlab.com/stcarrez/ada-servlet"
 long-description = """
 
@@ -17,16 +17,13 @@ long-description = """
 Ada Servlet allows to create web applications using the same pattern
 as the Java Servlet (See JSR 154, JSR 315). 
 
-The Ada Servlet library is used by the [Ada Server Faces](https://gitlab.com/stcarrez/ada-asf)
-framework and [Ada Web Application](https://gitlab.com/stcarrez/ada-awa)
-to provide server web requests.
+This library integrates the Ada Servlet in the Embedded Web Server.
 
 """
 
 [[depends-on]]
-security = "^1.4.1"
-utilada = "^2.5.0"
-elada = "^1.8.5"
+servletada = "^1.6.1"
+ews = "any"
 
 [gpr-externals]
 BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
