--- a/.alire/unit/alire.toml
+++ b/.alire/unit/alire.toml
@@ -1,12 +1,12 @@
-description = "Web Servlet Library following JSR 154, JSR 315 (Core)"
-tags = ["web", "servlet", "http", "json", "rest"]
-name = "servletada"
+description = "Web Servlet Library following JSR 154, JSR 315 (Testing framework)"
+tags = ["web", "servlet", "http", "json", "rest", "testing"]
+name = "servletada_unit"
 version = "1.6.1"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
 maintainers-logins = ["stcarrez"]
-project-files = [".alire/servletada.gpr"]
+project-files = ["servletada_unit.gpr"]
 website = "https://gitlab.com/stcarrez/ada-servlet"
 long-description = """
 
@@ -14,19 +14,15 @@ long-description = """
 [![Test Status](https://img.shields.io/jenkins/t/http/jenkins.vacs.fr/Ada-Servlet.svg)](https://jenkins.vacs.fr/job/Ada-Servlet/)
 [![codecov](https://codecov.io/gh/stcarrez/ada-servlet/branch/master/graph/badge.svg)](https://codecov.io/gh/stcarrez/ada-servlet)
 
-Ada Servlet allows to create web applications using the same pattern
-as the Java Servlet (See JSR 154, JSR 315). 
-
-The Ada Servlet library is used by the [Ada Server Faces](https://gitlab.com/stcarrez/ada-asf)
-framework and [Ada Web Application](https://gitlab.com/stcarrez/ada-awa)
-to provide server web requests.
+This library provides helper operations for unit testing a servlet implemented on top of
+Ada Servlet.
 
 """
 
 [[depends-on]]
-security = "^1.4.1"
+servletada = "^1.6.1"
 utilada = "^2.5.0"
-elada = "^1.8.5"
+utilada_unit = "^2.5.0"
 
 [gpr-externals]
 BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
