--- a/.alire/aws/alire.toml
+++ b/.alire/aws/alire.toml
@@ -1,7 +1,7 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (AWS)"
 tags = ["web", "servlet", "http", "json"]
 name = "servletada_aws"
-version = "1.6.1"
+version = "1.7.0"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
@@ -22,11 +22,11 @@ This library integrates the Ada Servlet in the Ada Web Server.
 """
 
 [[depends-on]]
-servletada = "^1.6.1"
-utilada_aws = "^2.5.0"
+servletada = "^1.7.0"
+utilada_aws = "^2.6.0"
 
 [gpr-externals]
-BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
+SERVLET_BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
 SERVLET_LIBRARY_TYPE = ["relocatable", "static", "static-pic"]
 
 [configuration]
