--- a/alire.toml
+++ b/alire.toml
@@ -1,7 +1,7 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (Core)"
 tags = ["web", "servlet", "http", "json", "rest"]
 name = "servletada"
-version = "1.6.1"
+version = "1.7.0"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
@@ -25,11 +25,11 @@ to provide server web requests.
 
 [[depends-on]]
 security = "^1.4.1"
-utilada = "^2.5.0"
+utilada = "^2.6.0"
 elada = "^1.8.5"
 
 [gpr-externals]
-BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
+SERVLET_BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
 SERVLET_LIBRARY_TYPE = ["relocatable", "static", "static-pic"]
 
 [configuration]
