--- a/alire.toml
+++ b/alire.toml
@@ -1,12 +1,12 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (Core)"
 tags = ["web", "servlet", "http", "json", "rest"]
 name = "servletada"
-version = "1.7.0"
+version = "1.7.1"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
 maintainers-logins = ["stcarrez"]
-project-files = [".alire/servletada.gpr"]
+project-files = ["servletada.gpr"]
 website = "https://gitlab.com/stcarrez/ada-servlet"
 long-description = """
 
