--- a/aws/alire.toml
+++ b/aws/alire.toml
@@ -31,3 +31,6 @@ SERVLET_LIBRARY_TYPE = ["relocatable", "static", "static-pic"]
 
 [configuration]
 disabled = true
+
+[[pins]]
+servletada = { path = '..' }
