Small improvement of samples
- add default log configuration when the samples.properties file is not found,
- add -p <port> option to change the server listening port,
- add -v option to launch in verbose mode,
- add -c <file> option to choose the path for the samples.properties file

--- a/samples.properties
+++ b/samples.properties
@@ -7,59 +7,27 @@ web.dir=samples/web;web
 contextPath=/openid
 bundle.dir=bundles
 bundle.var.samplesMsg=samples
-openid.realm=http://localhost:8080#{contextPath}/auth
-openid.callback_url=http://localhost:8080#{contextPath}/auth/verify
-openid.success_url=http://localhost:8080#{contextPath}/auth/success.html
-auth.url.orange=http://openid.orange.fr
-auth.url.google=https://www.google.com/accounts/o8/id
-auth.url.yahoo=http://open.login.yahooapis.com/openid20/www.yahoo.com/xrds
-auth.url.myopenid=http://www.myopenid.com/server
-auth.url.facebook=https://www.facebook.com/dialog/oauth
-auth.url.google-plus=https://accounts.google.com/o/oauth2/auth
-auth.provider.orange=openid
-auth.provider.google=openid
-auth.provider.yahoo=openid
-auth.provider.facebook=facebook
-auth.provider.google-plus=google-plus
 
-# Callback for the Facebook API demo
-facebook.callback=http://demo.vacs.fr/oauth/localhost:8080/demo/oauth_callback.html
-
-# Get an account on Facebook 
-facebook.client_id=PUT-HERE-YOUR-FACEBOOK-CLIENT-ID
-facebook.secret=PUT-HERE-YOUR-FACEBOOK-API-SECRET
-facebook.callback_url=http://demo.vacs.fr/oauth/localhost:8080#{contextPath}/auth/verify
-facebook.request_url=https://graph.facebook.com/oauth/access_token
-facebook.scope=read_stream,email
-
-# Get an account on Google+
-google-plus.client_id=PUT-HERE-GOOGLE-CLIENT-ID.apps.googleusercontent.com
-google-plus.secret=PUT-HERE_GOOGLE-SECRET
-google-plus.issuer=accounts.google.com
-google-plus.callback_url=http://demo.vacs.fr/oauth/localhost:8080#{contextPath}/auth/verify
-google-plus.request_url=https://accounts.google.com/o/oauth2/token
-google-plus.scope=openid profile email
-
-# Configuration for log4j
-log4j.rootCategory=DEBUG,console,result
-log4j.appender.console=Console
-log4j.appender.console.level=DEBUG
-log4j.appender.console.layout=level-message
-log4j.appender.result=File
-log4j.appender.result.File=samples.log
+# Configuration for samples
+samples.rootCategory=DEBUG,console,result
+samples.appender.console=Console
+samples.appender.console.level=DEBUG
+samples.appender.console.layout=level-message
+samples.appender.result=File
+samples.appender.result.File=samples.log
 
 # Logger configuration
-log4j.logger.log=WARN
-log4j.logger.Util.Properties=DEBUG
-log4j.logger.Util.Log=DEBUG
-log4j.logger.Util=DEBUG
-log4j.logger.Util.Serialize.Mappers=WARN
-log4j.logger.Util.Serialize.IO=INFO
-log4j.logger.AWA=DEBUG
-log4j.logger.Security=DEBUG
-log4j.logger.ASF=DEBUG
-log4j.logger.AWA.Modules=INFO
-log4j.logger.ADO.Databases=INFO
-log4j.logger.ASF.Views.Nodes.Reader=INFO
-log4j.logger.AWA.Applications.Configs=WARN
-log4j.logger.AWA.Modules=WARN
+samples.logger.log=WARN
+samples.logger.Util.Properties=DEBUG
+samples.logger.Util.Log=DEBUG
+samples.logger.Util=DEBUG
+samples.logger.Util.Serialize.Mappers=WARN
+samples.logger.Util.Serialize.IO=INFO
+samples.logger.AWA=DEBUG
+samples.logger.Security=DEBUG
+samples.logger.ASF=DEBUG
+samples.logger.AWA.Modules=INFO
+samples.logger.ADO.Databases=INFO
+samples.logger.ASF.Views.Nodes.Reader=INFO
+samples.logger.AWA.Applications.Configs=WARN
+samples.logger.AWA.Modules=WARN
