--- a/samples/aws/alire.toml
+++ b/samples/aws/alire.toml
@@ -1,7 +1,7 @@
 description = "AWS Servlet example"
 tags = ["web", "servlet", "http", "json"]
 name = "aws_samples"
-version = "1.7.1"
+version = "1.8.0"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
@@ -10,8 +10,8 @@ project-files = ["aws_samples.gpr"]
 website = "https://gitlab.com/stcarrez/ada-servlet"
 
 [[depends-on]]
-servletada = "^1.7.0"
-servletada_aws = "*"
+servletada = "^1.8.0"
+servletada_aws = "^1.8.0"
 
 [configuration]
 disabled = true
