Update to build with alire

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,23 +1,17 @@
-FROM ciceron/ada-util:latest
+FROM ciceron/alire-bookworm:latest
 
 MAINTAINER Stephane Carrez <Stephane.Carrez@gmail.com>
 
+RUN apt-get update \
+   && apt-get install -y libssl-dev
+
 RUN mkdir -p /usr/src \
+   && alr index --update-all \
    && cd /usr/src \
-   && git clone https://github.com/stcarrez/ada-el.git ada-el \
-   && git clone https://github.com/stcarrez/ada-security.git ada-security \
    && git clone https://github.com/stcarrez/ada-servlet.git ada-servlet \
-   && cd /usr/src/ada-el \
-   && ./configure --disable-shared --prefix=/usr \
-   && make -s \
-   && make -s install \
-   && cd /usr/src/ada-security \
-   && ./configure --disable-shared --prefix=/usr \
-   && make -s \
-   && make -s install \
    && cd /usr/src/ada-servlet \
-   && ./configure --disable-shared --prefix=/usr \
-   && make -s \
+   && make -s setup BUILD=debug PREFIX=/usr HAVE_ALIRE=yes HAVE_EWS=no HAVE_AWS=yes \
+   && make -s build \
    && make -s install
 
 WORKDIR /usr/src
