--- a/alire.toml
+++ b/alire.toml
@@ -1,7 +1,7 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (Core)"
 tags = ["web", "servlet", "http", "json", "rest"]
 name = "servletada"
-version = "1.8.0"
+version = "1.8.2"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
@@ -25,9 +25,9 @@ to provide server web requests.
 
 [[depends-on]]
 security = "^1.5.0"
-utilada = "^2.8.0"
+utilada = "^2.8.2"
 elada = "^1.8.5"
-xmlada = "~24.0"
+xmlada = "any"
 
 [gpr-externals]
 SERVLET_BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
