--- a/aws/alire.toml
+++ b/aws/alire.toml
@@ -1,7 +1,7 @@
 description = "Web Servlet Library following JSR 154, JSR 315 (AWS)"
 tags = ["web", "servlet", "http", "json"]
 name = "servletada_aws"
-version = "1.8.0"
+version = "1.8.2"
 licenses = "Apache-2.0"
 authors = ["Stephane.Carrez@gmail.com"]
 maintainers = ["Stephane.Carrez@gmail.com"]
@@ -22,8 +22,9 @@ This library integrates the Ada Servlet in the Ada Web Server.
 """
 
 [[depends-on]]
-servletada = "^1.8.0"
-utilada_aws = "^2.8.0"
+servletada = "^1.8.2"
+utilada_aws = "^2.8.2"
+aws = "any"
 
 [gpr-externals]
 SERVLET_BUILD = ["distrib", "debug", "optimize", "profile", "coverage"]
